src/compiler/phase/synan/Prev25Parser.java
// Generated from Prev25Parser.g4 by ANTLR 4.13.2

	package compiler.phase.synan;	
	
	import java.util.*;
	import compiler.common.report.*;
	import compiler.phase.lexan.*;
	import compiler.phase.abstr.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"doclint:missing", "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class Prev25Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTCONST=1, CHARCONST=2, STRING=3, AMP=4, PIPE=5, EQEQ=6, NOTEQ=7, LT=8, 
		GT=9, LTEQ=10, GTEQ=11, MUL=12, DIV=13, MOD=14, PLUS=15, MINUS=16, EXCL=17, 
		DOT=18, CARET=19, EQUAL=20, COLON=21, COMMA=22, LBRACE=23, RBRACE=24, 
		LPAREN=25, RPAREN=26, LBRACK=27, RBRACK=28, BOOL=29, CHAR=30, DO=31, ELSE=32, 
		END=33, FALSE=34, FUN=35, IF=36, IN=37, INT=38, LET=39, NULL=40, RETURN=41, 
		SIZEOF=42, THEN=43, TRUE=44, TYP=45, VAR=46, VOID=47, WHILE=48, ID=49, 
		COMMENT=50, WHITESPACE=51, SYMBOL=52, KEYWORD=53;
	public static final int
		RULE_parameterList = 0, RULE_parameter = 1, RULE_recordList = 2, RULE_record = 3, 
		RULE_stmtList = 4, RULE_source = 5, RULE_defs = 6, RULE_def = 7, RULE_stmts = 8, 
		RULE_stmt = 9, RULE_parTypes = 10, RULE_type = 11, RULE_argExprs = 12, 
		RULE_expr = 13, RULE_logicalOrExpr = 14, RULE_logicalAndExpr = 15, RULE_compExpr = 16, 
		RULE_addExpr = 17, RULE_mulExpr = 18, RULE_prefixExpr = 19, RULE_suffixExpr = 20, 
		RULE_primaryExpr = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"parameterList", "parameter", "recordList", "record", "stmtList", "source", 
			"defs", "def", "stmts", "stmt", "parTypes", "type", "argExprs", "expr", 
			"logicalOrExpr", "logicalAndExpr", "compExpr", "addExpr", "mulExpr", 
			"prefixExpr", "suffixExpr", "primaryExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'&'", "'|'", "'=='", "'!='", "'<'", "'>'", "'<='", 
			"'>='", "'*'", "'/'", "'%'", "'+'", "'-'", "'!'", "'.'", "'^'", "'='", 
			"':'", "','", "'{'", "'}'", "'('", "')'", "'['", "']'", "'bool'", "'char'", 
			"'do'", "'else'", "'end'", "'false'", "'fun'", "'if'", "'in'", "'int'", 
			"'let'", "'null'", "'return'", "'sizeof'", "'then'", "'true'", "'typ'", 
			"'var'", "'void'", "'while'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INTCONST", "CHARCONST", "STRING", "AMP", "PIPE", "EQEQ", "NOTEQ", 
			"LT", "GT", "LTEQ", "GTEQ", "MUL", "DIV", "MOD", "PLUS", "MINUS", "EXCL", 
			"DOT", "CARET", "EQUAL", "COLON", "COMMA", "LBRACE", "RBRACE", "LPAREN", 
			"RPAREN", "LBRACK", "RBRACK", "BOOL", "CHAR", "DO", "ELSE", "END", "FALSE", 
			"FUN", "IF", "IN", "INT", "LET", "NULL", "RETURN", "SIZEOF", "THEN", 
			"TRUE", "TYP", "VAR", "VOID", "WHILE", "ID", "COMMENT", "WHITESPACE", 
			"SYMBOL", "KEYWORD"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Prev25Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



		private Location loc(Token tok) { return new Location((LexAn.LocLogToken)tok); }
		private Location loc(Token     tok1, Token     tok2) { return new Location((LexAn.LocLogToken)tok1, (LexAn.LocLogToken)tok2); }
		private Location loc(Token     tok1, Locatable loc2) { return new Location((LexAn.LocLogToken)tok1, loc2); }
		private Location loc(Locatable loc1, Token     tok2) { return new Location(loc1, (LexAn.LocLogToken)tok2); }
		private Location loc(Locatable loc1, Locatable loc2) { return new Location(loc1, loc2); }

	public Prev25Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterListContext extends ParserRuleContext {
		public List<AST.ParDefn> ast;
		public ParameterListContext pl;
		public ParameterContext parameter;
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(Prev25Parser.COMMA, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		return parameterList(0);
	}

	private ParameterListContext parameterList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ParameterListContext _localctx = new ParameterListContext(_ctx, _parentState);
		ParameterListContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_parameterList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				 ((ParameterListContext)_localctx).ast =  new ArrayList<AST.ParDefn>(); 
				}
				break;
			case 2:
				{
				setState(46);
				((ParameterListContext)_localctx).parameter = parameter();
				 ((ParameterListContext)_localctx).ast =  new ArrayList<AST.ParDefn>(); _localctx.ast.addLast(((ParameterListContext)_localctx).parameter.ast); 
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(58);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ParameterListContext(_parentctx, _parentState);
					_localctx.pl = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_parameterList);
					setState(51);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(52);
					match(COMMA);
					setState(53);
					((ParameterListContext)_localctx).parameter = parameter();
					 ((ParameterListContext)_localctx).ast =  ((ParameterListContext)_localctx).pl.ast; _localctx.ast.addLast(((ParameterListContext)_localctx).parameter.ast); 
					}
					} 
				}
				setState(60);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterContext extends ParserRuleContext {
		public AST.ParDefn ast;
		public Token ID;
		public TypeContext type;
		public TerminalNode ID() { return getToken(Prev25Parser.ID, 0); }
		public TerminalNode COLON() { return getToken(Prev25Parser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			((ParameterContext)_localctx).ID = match(ID);
			setState(62);
			match(COLON);
			setState(63);
			((ParameterContext)_localctx).type = type();
			 ((ParameterContext)_localctx).ast =  new AST.ParDefn(loc(((ParameterContext)_localctx).ID, (((ParameterContext)_localctx).type!=null?(((ParameterContext)_localctx).type.stop):null)), (((ParameterContext)_localctx).ID!=null?((ParameterContext)_localctx).ID.getText():null), ((ParameterContext)_localctx).type.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RecordListContext extends ParserRuleContext {
		public List<AST.CompDefn> ast;
		public RecordListContext rl;
		public RecordContext record;
		public RecordContext record() {
			return getRuleContext(RecordContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(Prev25Parser.COMMA, 0); }
		public RecordListContext recordList() {
			return getRuleContext(RecordListContext.class,0);
		}
		public RecordListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recordList; }
	}

	public final RecordListContext recordList() throws RecognitionException {
		return recordList(0);
	}

	private RecordListContext recordList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		RecordListContext _localctx = new RecordListContext(_ctx, _parentState);
		RecordListContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_recordList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(67);
			((RecordListContext)_localctx).record = record();
			 ((RecordListContext)_localctx).ast =  new ArrayList<AST.CompDefn>(); _localctx.ast.addLast(((RecordListContext)_localctx).record.ast); 
			}
			_ctx.stop = _input.LT(-1);
			setState(77);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new RecordListContext(_parentctx, _parentState);
					_localctx.rl = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_recordList);
					setState(70);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(71);
					match(COMMA);
					setState(72);
					((RecordListContext)_localctx).record = record();
					 ((RecordListContext)_localctx).ast =  ((RecordListContext)_localctx).rl.ast; _localctx.ast.addLast(((RecordListContext)_localctx).record.ast); 
					}
					} 
				}
				setState(79);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RecordContext extends ParserRuleContext {
		public AST.CompDefn ast;
		public Token ID;
		public TypeContext type;
		public TerminalNode ID() { return getToken(Prev25Parser.ID, 0); }
		public TerminalNode COLON() { return getToken(Prev25Parser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public RecordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_record; }
	}

	public final RecordContext record() throws RecognitionException {
		RecordContext _localctx = new RecordContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_record);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			((RecordContext)_localctx).ID = match(ID);
			setState(81);
			match(COLON);
			setState(82);
			((RecordContext)_localctx).type = type();
			 ((RecordContext)_localctx).ast =  new AST.CompDefn(loc(((RecordContext)_localctx).ID, (((RecordContext)_localctx).type!=null?(((RecordContext)_localctx).type.stop):null)), (((RecordContext)_localctx).ID!=null?((RecordContext)_localctx).ID.getText():null), ((RecordContext)_localctx).type.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtListContext extends ParserRuleContext {
		public List<AST.Stmt> ast;
		public StmtsContext stmts;
		public StmtsContext stmts() {
			return getRuleContext(StmtsContext.class,0);
		}
		public StmtListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtList; }
	}

	public final StmtListContext stmtList() throws RecognitionException {
		StmtListContext _localctx = new StmtListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stmtList);
		try {
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ELSE:
			case END:
				enterOuterAlt(_localctx, 1);
				{
				 ((StmtListContext)_localctx).ast =  new ArrayList<AST.Stmt>(); 
				}
				break;
			case INTCONST:
			case CHARCONST:
			case STRING:
			case PLUS:
			case MINUS:
			case EXCL:
			case CARET:
			case LBRACE:
			case LPAREN:
			case FALSE:
			case IF:
			case LET:
			case NULL:
			case RETURN:
			case SIZEOF:
			case TRUE:
			case WHILE:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				((StmtListContext)_localctx).stmts = stmts(0);
				 ((StmtListContext)_localctx).ast =  ((StmtListContext)_localctx).stmts.ast; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceContext extends ParserRuleContext {
		public AST.Nodes<AST.FullDefn> ast;
		public DefsContext defs;
		public DefsContext defs() {
			return getRuleContext(DefsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Prev25Parser.EOF, 0); }
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_source);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			((SourceContext)_localctx).defs = defs(0);
			setState(92);
			match(EOF);
			 ((SourceContext)_localctx).ast =  new AST.Nodes<AST.FullDefn>(((SourceContext)_localctx).defs.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefsContext extends ParserRuleContext {
		public List<AST.FullDefn> ast;
		public DefsContext d;
		public DefContext def;
		public DefContext def() {
			return getRuleContext(DefContext.class,0);
		}
		public DefsContext defs() {
			return getRuleContext(DefsContext.class,0);
		}
		public DefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defs; }
	}

	public final DefsContext defs() throws RecognitionException {
		return defs(0);
	}

	private DefsContext defs(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		DefsContext _localctx = new DefsContext(_ctx, _parentState);
		DefsContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_defs, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(96);
			((DefsContext)_localctx).def = def();
			 ((DefsContext)_localctx).ast =  new ArrayList<AST.FullDefn>(); _localctx.ast.addLast(((DefsContext)_localctx).def.ast); 
			}
			_ctx.stop = _input.LT(-1);
			setState(105);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new DefsContext(_parentctx, _parentState);
					_localctx.d = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_defs);
					setState(99);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(100);
					((DefsContext)_localctx).def = def();
					 ((DefsContext)_localctx).ast =  ((DefsContext)_localctx).d.ast; _localctx.ast.addLast(((DefsContext)_localctx).def.ast); 
					}
					} 
				}
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
